--- a/gigs.html
+++ b/gigs.html
@@ -30,48 +30,42 @@
 
 
 <hr>
-<h4>Dave O'Neill's Funhouse, The Grandview Hotel Fairfield (Melbourne)</h4>
+<h4>Happy Endings, Kings Cross, Sydney</h4>
 
-            <p>16 July</p>
+            <p>4 August</p>
             <p>7.30pm </p>
 
             <p>More Info:</p>
 
-            <a class="https://www.facebook.com/itsDaveONeil"> here!</a>
+            <a class="http://happyendingscomedyclub.com.au"> here!</a>
 
 <br>
 
 <hr>
+<h4>MCing the Forresters, Surry Hills, Sydney</h4>
 
-
-
-<hr>
-<h4>Dave O'Neill's Funhouse, The Grandview Hotel Fairfield (Melbourne)</h4>
-
-            <p>16 July</p>
+            <p>6 August</p>
             <p>7.30pm </p>
 
             <p>More Info:</p>
 
-            <a class="https://www.facebook.com/itsDaveONeil"> here!</a>
+            <a class="http://thecomedyloungesydney.com/tag/the-forresters"> here!</a>
+
+<br>
 
 <br>
 
 <hr>
+<h4>FINAL EVERYONE'S A WINNER </h4>
 
-<hr>
-<h4>Splendour in the Grass, North Byron Parklands</h4>
-
-            <p>25, 26, 27 July</p>
+            <p>8 August</p>
             <p>7.30pm </p>
 
-            <p>More Info:</p>
+            <p>More Info: TBC</p>
 
-            <a class="http://splendourinthegrass.com"> here!</a>
+      
 
 <br>
-
-<hr>
 
 
 <br>
@@ -91,6 +85,23 @@
 
 
 <h3>You missed me at...</h3>
+
+
+
+<hr>
+
+<hr>
+<h4>Splendour in the Grass, North Byron Parklands</h4>
+
+            <p>25, 26, 27 July</p>
+            <p>7.30pm </p>
+
+            <p>More Info:</p>
+
+            <a class="http://splendourinthegrass.com"> here!</a>
+
+<br>
+
 
 <h4>MC Comedy Lounge - Cafe Lounge Darlinghurst </h4>
 
