--- a/gigs.html
+++ b/gigs.html
@@ -27,6 +27,76 @@
 <br>
 <hr>
 <h3>Upcoming Gigs</h3>
+<hr>
+
+<h4>Tracksuits Live, Sydney Fringe Festival</h4>
+
+            <p>Sat 20th Sept - 9:15 pm, Sat 27th Sept - 9:15 pm, Sun 28th Sept - 8:15 om</p>
+            <p>The Factory Theatre, Marrickville</p>
+
+            <a class="http://fringecomedy.com.au/single-event?show_id=772"> Tickets here!</a>
+<br>
+
+<h4>Alice Fraser Solves All Your Problems in 6 Easy Steps, Sydney Fringe Festival</h4>
+
+            <p>thu 25th Sept - 9:15 pm, Sat 27th Sept - 9:15 pm, Sun 28th Sept - 8:15 om</p>
+            <p>The Factory Theatre, Marrickville</p>
+
+            <a class="http://fringecomedy.com.au/single-event?show_id=770"> Tickets here!</a>
+<br>
+
+<h4>fastBREAK at the Powerhouse Museum</h4>
+
+            <p>Fri 26th Sept - 8.00 am</p>
+            <p>The Powerhouse Museum, Sydney</p>
+
+            <a class="http://vibewire.org/fastbreak-september-paranoid-android/"> Tickets here!</a>
+<br>
+
+<h4>TED Talk at TEDx Macquarie University</h4>
+
+            <p>Sat, 27 Sept 2014 from 9:00 AM to 6:00 PM</p>
+            <p>The Powerhouse Museum, Sydney</p>
+
+            <a class="https://www.eventbrite.com.au/e/tedxmacquarieuniversity-tickets-2326612962"> SOLD OUT!</a>
+<br>
+
+<h4>Headlining The Bunker Comedy Club, Canberra</h4>
+
+            <p>4 October 7.30pm, </p>
+            <p>Ginninderra Labor Club, Canberra</p>
+
+            <a class="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=101814"> Tickets Here!</a>
+<br>
+
+
+<h4>The Impossible Showcase, Melbourne Fringe Festival</h4>
+
+            <p>5 October 9.00pm, </p>
+            <p>The Portland Hotel, Melbourne</p>
+
+            <a class="http://www.melbournefringe.com.au/fringe-festival/show/the-impossible-showcase/"> Tickets Here!</a>
+<br>
+
+
+
+<br>
+<h4>Regular Gigs</h4>
+
+<br>
+<hr>
+<h4>"Tracksuits" FBI Radio 94.5</h4>
+
+            <p>Mondays 12pm</p>
+
+            <p>tune in online</p>
+
+            <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
+
+<br>
+
+
+<h3>You missed me at...</h3>
 
 
 <hr>
@@ -52,40 +122,6 @@
             <a class="http://thecomedyloungesydney.com/tag/the-forresters"> here!</a>
 
 <br>
-
-<br>
-
-<hr>
-<h4>FINAL EVERYONE'S A WINNER </h4>
-
-            <p>8 August</p>
-            <p>7.30pm </p>
-
-            <p>More Info: TBC</p>
-
-      
-
-<br>
-
-
-<br>
-<h4>Regular Gigs</h4>
-
-<br>
-<hr>
-<h4>"Tracksuits" FBI Radio 94.5</h4>
-
-            <p>Mondays 12pm</p>
-
-            <p>tune in online</p>
-
-            <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
-
-<br>
-
-
-<h3>You missed me at...</h3>
-
 
 
 <hr>
