--- a/gigs.html
+++ b/gigs.html
@@ -29,6 +29,69 @@
 <h3>Upcoming Gigs</h3>
 <hr>
 
+
+<h4>Headlining The Bunker Comedy Club, Canberra</h4>
+
+            <p>4 October 7.30pm, </p>
+            <p>Ginninderra Labor Club, Canberra</p>
+
+            <a class="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=101814"> Tickets Here!</a>
+<br>
+
+
+<h4>The Impossible Showcase, Melbourne Fringe Festival</h4>
+
+            <p>5 October 9.00pm, </p>
+            <p>The Portland Hotel, Melbourne</p>
+
+            <a class="http://www.melbournefringe.com.au/fringe-festival/show/the-impossible-showcase/"> Tickets Here!</a>
+<br>
+
+
+
+<h4>MC - Comedy On Edge, Sydney</h4>
+
+            <p>Tue 7 October 8.00pm, </p>
+            <p>87 Abercrombie St, Chippendale</p>
+
+            <a class="http://www.comedyonedge.com"> More Info Here!</a>
+<br>
+
+
+<h4>TOD TALKS at Giant Dwarf</h4>
+
+            <p>Thursday 23 October 8.00pm, </p>
+            <p>Giant Dwarf Theatre, 199 Cleveland Street, Redfern</p>
+
+            <a class="http://giantdwarf.com.au/tod-talks/"> Tickets Here!</a>
+<br>
+
+<h4>Comedy at The Basement, Sydney</h4>
+
+            <p>29 October 8.00pm, </p>
+            <p>The Basement, 29 Reiby Place, Circular Quay</p>
+
+            <a class="http://www.thebasement.com.au"> Tickets Here!</a>
+<br>
+
+<br>
+<h4>Regular Gigs</h4>
+
+<br>
+<hr>
+<h4>"Tracksuits" FBI Radio 94.5</h4>
+
+            <p>Mondays 12pm</p>
+
+            <p>tune in online</p>
+
+            <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
+
+<br>
+
+
+<h3>You missed me at...</h3>
+
 <h4>Tracksuits Live, Sydney Fringe Festival</h4>
 
             <p>Sat 20th Sept - 9:15 pm, Sat 27th Sept - 9:15 pm, Sun 28th Sept - 8:15 om</p>
@@ -60,45 +123,6 @@
 
             <a class="https://www.eventbrite.com.au/e/tedxmacquarieuniversity-tickets-2326612962"> SOLD OUT!</a>
 <br>
-
-<h4>Headlining The Bunker Comedy Club, Canberra</h4>
-
-            <p>4 October 7.30pm, </p>
-            <p>Ginninderra Labor Club, Canberra</p>
-
-            <a class="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=101814"> Tickets Here!</a>
-<br>
-
-
-<h4>The Impossible Showcase, Melbourne Fringe Festival</h4>
-
-            <p>5 October 9.00pm, </p>
-            <p>The Portland Hotel, Melbourne</p>
-
-            <a class="http://www.melbournefringe.com.au/fringe-festival/show/the-impossible-showcase/"> Tickets Here!</a>
-<br>
-
-
-
-<br>
-<h4>Regular Gigs</h4>
-
-<br>
-<hr>
-<h4>"Tracksuits" FBI Radio 94.5</h4>
-
-            <p>Mondays 12pm</p>
-
-            <p>tune in online</p>
-
-            <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
-
-<br>
-
-
-<h3>You missed me at...</h3>
-
-
 <hr>
 <h4>Happy Endings, Kings Cross, Sydney</h4>
 
