Added Patreon button.M

--- a/index.html
+++ b/index.html
@@ -455,7 +455,11 @@ line-height: 19px;
 
       <div class="textblock">
         <p class="about_text"> I'm a writer and comedian based in Sydney.  You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p>
-      </div>
+        <a href="http://patreon.com/alicefraser">
+       <div class="div_image" style="height:100px;margin-top:40px;background-image:url('img/patreon.png');background-position:top;background-size:180px;"></div>
+        </a> 
+    
+    </div>
   </div>
 
 
