Changed div a bit.

--- a/index.html
+++ b/index.html
@@ -451,12 +451,12 @@ line-height: 19px;
           </tr>
         </table>
 
-      <p class="about_heading" style= "text-align:center;">Alice Fraser</h3></p>
+      <p class="about_heading" style= "text-align:center;font-size:26px;">Alice Fraser</h3></p>
 
       <div class="textblock">
-        <p class="about_text"> I'm a writer and comedian based in Sydney.  You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p>
+        <p class="about_text" style="font-size:14px;"> I'm a writer and comedian based in Sydney.  You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p>
         <a href="http://patreon.com/alicefraser">
-       <div class="div_image" style="height:100px;margin-top:40px;background-image:url('img/patreon.png');background-position:top;background-size:180px;"></div>
+       <div class="div_image" style="height:100px;margin-top:20px;background-image:url('img/patreon.png');background-position:top;background-size:100px;"></div>
         </a> 
     
     </div>
