--- a/gigs.html
+++ b/gigs.html
@@ -30,48 +30,63 @@
 <hr>
 
 
-<h4>Headlining The Bunker Comedy Club, Canberra</h4>
+<h4>Support Spot: Happy Endings Kings X</h4>
 
-            <p>4 October 7.30pm, </p>
-            <p>Ginninderra Labor Club, Canberra</p>
+             <p>Friday 12 December, 8pm</p>
 
-            <a class="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=101814"> Tickets Here!</a>
+            <a class="http://happyendingscomedyclub.com.au/ticket-info/"> Tickets Here!</a>
+<br>
+
+<h4>Cafe Lounge, Darlinghurst</h4>
+
+            <p>Monday 22 Dec 2014</p>
+
+            <a class="https://www.facebook.com/pages/The-Comedy-Lounge-Cafe-Lounge/265515110137916"> Details Here!</a>
+<br>
+
+<h4>Alice Fraser: Everyone's A Winner at Perth Fringe Festival 2015</h4>
+
+            <p>Saturday 7 February 2015 to Saturday 21 February 2015</p>
+
+            <a class="https://www.fringeworld.com.au/program/event/e682e98f-a206-4ff7-b3c3-f65cbc22f4ca/"> Tickets and Dates, Here!</a>
+<br>
+<h4>Love Bites (Host) Perth Fringe Festival 2015</h4>
+
+            <p>4, 5, 6, 7 and 8 February 2015</p>
+  <p> Noodle Palace, 19 Francis Street, Northbridge, WA</p>
+            <a class="https://www.fringeworld.com.au/program/event/be97015c-6108-4c57-a283-019e58781432/"> Tickets and Dates, Here!</a>
 <br>
 
 
-<h4>The Impossible Showcase, Melbourne Fringe Festival</h4>
+<h4>Alice Fraser: Everyone's A Winner at Adelaide Fringe Festival 2015</h4>
 
-            <p>5 October 9.00pm, </p>
-            <p>The Portland Hotel, Melbourne</p>
+             <p>3 March 15 2015 to Sunday, 15 March 2015</p>
+            
+                        <p>Gluttony</p>
 
-            <a class="http://www.melbournefringe.com.au/fringe-festival/show/the-impossible-showcase/"> Tickets Here!</a>
+            <a class="http://www.adelaidefringe.com.au/fringetix/alice-fraser-everyones-a-winner/b49f5cb6-26d9-4436-9b0d-9b0b25a959b9"> Tickets and Dates, Here!</a>
+<br>
+
+<h4>Love Bites (Host) at Adelaide Fringe Festival 2015</h4>
+
+             <p>Tuesday, 24 February 2015 to Sunday, 15 March 2015</p>
+
+            <a class="http://www.adelaidefringe.com.au/fringetix/love-bites/b14f59a4-1db7-4676-976c-f781e1ae49b8"> Tickets and Dates, Here!</a>
 <br>
 
 
+<h4>Love Bites (Host) at Melbourne International Comedy Festival 2015</h4>
 
-<h4>MC - Comedy On Edge, Sydney</h4>
+             <p>Saturday, 28 March to Sunday, 19 April 2015</p>
 
-            <p>Tue 7 October 8.00pm, </p>
-            <p>87 Abercrombie St, Chippendale</p>
-
-            <a class="http://www.comedyonedge.com"> More Info Here!</a>
+            <a class="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=115145"> Tickets and Dates, Here!</a>
 <br>
 
+<h4>Alice Fraser is SAVAGE at Melbourne International Comedy Festival 2015</h4>
 
-<h4>TOD TALKS at Giant Dwarf</h4>
+             <p>26 March - 19 April excluding Mondays 2015</p>
 
-            <p>Thursday 23 October 8.00pm, </p>
-            <p>Giant Dwarf Theatre, 199 Cleveland Street, Redfern</p>
-
-            <a class="http://giantdwarf.com.au/tod-talks/"> Tickets Here!</a>
-<br>
-
-<h4>Comedy at The Basement, Sydney</h4>
-
-            <p>29 October 8.00pm, </p>
-            <p>The Basement, 29 Reiby Place, Circular Quay</p>
-
-            <a class="http://www.thebasement.com.au"> Tickets Here!</a>
+            <a class="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=115145"> Tickets and Dates, Here!</a>
 <br>
 
 <br>
@@ -92,46 +107,51 @@
 
 <h3>You missed me at...</h3>
 
+
+<h4>MC - Comedy On Edge, Sydney</h4>
+            <p>Tue 7 October 8.00pm, </p>
+            <p>87 Abercrombie St, Chippendale</p>
+<br>
+
+
+<h4>TOD TALKS at Giant Dwarf</h4>
+            <p>Thursday 23 October 8.00pm, </p>
+            <p>Giant Dwarf Theatre, 199 Cleveland Street, Redfern</p>
+<br>
+
+<h4>Comedy at The Basement, Sydney</h4>
+            <p>29 October 8.00pm, </p>
+            <p>The Basement, 29 Reiby Place, Circular Quay</p>
+<br>
+<h4>Headlining The Bunker Comedy Club, Canberra</h4>
+
+            <p>4 October 7.30pm, </p>
+<br>
+
 <h4>Tracksuits Live, Sydney Fringe Festival</h4>
 
             <p>Sat 20th Sept - 9:15 pm, Sat 27th Sept - 9:15 pm, Sun 28th Sept - 8:15 om</p>
-            <p>The Factory Theatre, Marrickville</p>
 
-            <a class="http://fringecomedy.com.au/single-event?show_id=772"> Tickets here!</a>
 <br>
 
 <h4>Alice Fraser Solves All Your Problems in 6 Easy Steps, Sydney Fringe Festival</h4>
 
             <p>thu 25th Sept - 9:15 pm, Sat 27th Sept - 9:15 pm, Sun 28th Sept - 8:15 om</p>
-            <p>The Factory Theatre, Marrickville</p>
 
-            <a class="http://fringecomedy.com.au/single-event?show_id=770"> Tickets here!</a>
 <br>
 
 <h4>fastBREAK at the Powerhouse Museum</h4>
 
             <p>Fri 26th Sept - 8.00 am</p>
-            <p>The Powerhouse Museum, Sydney</p>
-
-            <a class="http://vibewire.org/fastbreak-september-paranoid-android/"> Tickets here!</a>
 <br>
 
 <h4>TED Talk at TEDx Macquarie University</h4>
 
             <p>Sat, 27 Sept 2014 from 9:00 AM to 6:00 PM</p>
-            <p>The Powerhouse Museum, Sydney</p>
-
-            <a class="https://www.eventbrite.com.au/e/tedxmacquarieuniversity-tickets-2326612962"> SOLD OUT!</a>
 <br>
 <hr>
 <h4>Happy Endings, Kings Cross, Sydney</h4>
-
             <p>4 August</p>
-            <p>7.30pm </p>
-
-            <p>More Info:</p>
-
-            <a class="http://happyendingscomedyclub.com.au"> here!</a>
 
 <br>
 
@@ -175,61 +195,30 @@
 
             <p>3 June</p>
             <p>8pm </p>
-
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://www.comedystore.com.au/index.php?option=com_content&view=article&id=47&Itemid=55">Here</a>
-
 <br>
 
 <hr>
 <h4>Spots at the Sydney Comedy Store</h4>
 
             <p>Tue 27th, Thurs 29th, Fri 20th and Sat 31st May</p>
-            <p>8pm </p>
-
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://www.comedystore.com.au/index.php?option=com_content&view=article&id=47&Itemid=55">Here</a>
-
 
 <hr>
 <h4>Headliner at Get Up Standup at USYD Manning Bar</h4>
 
-            <p>Wed 28 May</p>
-            <p>1pm </p>
-
-            <p>Free!</p>
 <br>
 <hr>
 <hr>
 <h4>"Everyone's A Winner" at Sydney International Comedy Festival 2014</h4>
-
             <p>6, 7, 8, 9 May 7pm </p>
-            <p>11 May 6pm </p>
-
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://premier.ticketek.com.au/shows/Show.aspx?sh=ALICEFRA14">Here</a>
-
 <br>
 <hr>
 
 <hr>
 <h4>"Everyone's A Winner" at Melbourne International Comedy Festival 2014</h4>
 
-            <p>27 March to 6 April (excl. Mondays) 8.30pm </p>
-            <p>8 April to 20 April (excl. Mondays) 6.15pm </p>
-            <p>$22 full / $18 concession / $18 Group 6+ / $15 Preview / $15 Tightarse Tuesday</p>
-
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=71570">Here</a>
-
 <br>
 
 <h4>Preview Night & Cracker Comedy Night at the Seymour Centre, the Factory Theatre and the Concourse in Chatswood for Sydney Comedy Festival 2014</h4>
-<br>
 <hr>
 <h4>"Everyone's A Winner" at the Canberra Comedy Festival</h4>
 
