--- a/gigs.html
+++ b/gigs.html
@@ -37,7 +37,7 @@
             <a class="http://happyendingscomedyclub.com.au/ticket-info/"> Tickets Here!</a>
 <br>
 
-<h4>Cafe Lounge, Darlinghurst</h4>
+<h4>Cafe Lounge, Darlinghurst, CHRISTMAS GALA</h4>
 
             <p>Monday 22 Dec 2014</p>
 
