--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ mixpanel.track("Home Page Hit");
 .div_image{
   width:100%;
   height:550px;
-  max-height: 450px;
+  max-height: 400px;
   background-size: 460px;
   background-position:top, center;
   background-repeat: no-repeat;
@@ -454,9 +454,9 @@ line-height: 19px;
       <p class="about_heading" style= "text-align:center;font-size:26px;">Alice Fraser</h3></p>
 
       <div class="textblock">
-        <p class="about_text" style="font-size:14px;"> I'm a writer and comedian based in Sydney.  You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p>
+        <p class="about_text" style="font-size:14px;margin-bottom:10px;"> I'm a writer and comedian based in Sydney.  You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p>
         <a href="http://patreon.com/alicefraser">
-       <div class="div_image" style="height:100px;margin-top:20px;background-image:url('img/patreon.png');background-position:top;background-size:100px;"></div>
+       <div class="div_image" style="height:100px;margin-top:35px;background-image:url('img/patreon.png');background-position:top;background-size:100px;"></div>
         </a> 
     
     </div>
