--- a/xml.html
+++ b/xml.html
@@ -70,7 +70,7 @@ $(document).ready(function(){
   <li>Now go to the feed code on alicecomedyfraser on github by clicking <a target="_blank" href="https://github.com/alicerfraser/alicecomedyfraser/blob/gh-pages/podcast.rss" target="_blank">here</a>.</li>
   <li>Find the itunes tag for "Arts".  Underneath that will be the first "item" tag.  Make a space between them and insert the xml for the new item.</li>
   <li>Save the Github page, then check that the feed updated properly by going <a target="_blank" href="http://alicecomedyfraser.com/podcast.rss">here</a>. </li>
-  <li>Check that the RSS is valid by going <a target="_blank" href="http://www.rssboard.org/rss-validator/">here</a> </li>
+  <li>Check that the RSS is valid by going <a target="_blank" href="http://www.rssboard.org/rss-validator/check.cgi?url=http%3A%2F%2Falicecomedyfraser.com%2Fpodcast.rss">here</a> </li>
 
 
 </ol>
