--- a/gigs.html
+++ b/gigs.html
@@ -30,21 +30,6 @@
 <hr>
 
 
-<h4>Love Bites (Host) at Melbourne International Comedy Festival 2015</h4>
-
-             <p>Saturday, 28 March to Sunday, 19 April 2015</p>
-
-            <a class="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=115145"> Tickets and Dates, Here!</a>
-<br>
-
-<h4>Alice Fraser is SAVAGE at Melbourne International Comedy Festival 2015</h4>
-
-             <p>26 March - 19 April excluding Mondays 2015</p>
-
-            <a class="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=115145"> Tickets and Dates, Here!</a>
-<br>
-
-
 <h4>Alice Fraser is SAVAGE at Sydney Comedy Festival 2015</h4>
 
              <p>Thu 7th May - 8:15 pm,
@@ -81,6 +66,15 @@ Sat 30th May </p>
 
 <h3>You missed me at...</h3>
 
+<h4>Love Bites (Host) at Melbourne International Comedy Festival 2015</h4>
+
+             <p>Saturday, 28 March to Sunday, 19 April 2015</p>
+<br>
+
+<h4>Alice Fraser is SAVAGE at Melbourne International Comedy Festival 2015</h4>
+
+             <p>26 March - 19 April </p>
+<br>
 
 <h4>Alice Fraser: Everyone's A Winner at Perth Fringe Festival 2015</h4>
 
