--- a/gigs.html
+++ b/gigs.html
@@ -26,6 +26,31 @@
 
 <br>
 <hr>
+<h3>Online Alice Moments</h3>
+<hr>
+<h4>Souncloud</h4>
+
+            <a class="https://soundcloud.com/alice-rebekah-fraser"> Listen Here!</a>
+<br>
+<hr>
+<h4>SBS Comedy</h4>
+
+            <a class="http://www.sbs.com.au/comedy/person/alice-rebekah-fraser-0"> Read Here!</a>
+<br>
+<hr>
+<h4>Sexy Six Year Olds: For A Rational Fear</h4>
+
+            <a class="https://www.youtube.com/watch?v=k4l93vbyWWw"> Watch Here!</a>
+<br>
+<hr>
+<h4>TEDx Talk: What Are We Doing?</h4>
+
+            <a class="https://www.youtube.com/watch?v=M4MlaRGcFHI"> Watch Here!</a>
+<br>
+<hr>
+
+
+
 <h3>Upcoming Gigs</h3>
 <hr>
 
