--- a/gigs.html
+++ b/gigs.html
@@ -28,7 +28,7 @@
 <hr>
 <h3>Online Alice Moments</h3>
 <hr>
-<h4>Souncloud</h4>
+<h4>Soundcloud</h4>
 
             <a class="https://soundcloud.com/alice-rebekah-fraser"> Listen Here!</a>
 <br>
@@ -72,22 +72,7 @@ Sat 30th May </p>
 
             <a class="http://www.sydneycomedyfest.com.au/single-event?show_id=891"> Tickets Here!</a>
 <br>
-
-<br>
-<h4>Regular Gigs</h4>
-
-<br>
 <hr>
-<h4>"Tracksuits" FBI Radio 94.5</h4>
-
-            <p>Mondays 12pm</p>
-
-            <p>tune in online</p>
-
-            <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
-
-<br>
-
 
 <h3>You missed me at...</h3>
 
