--- a/gigs.html
+++ b/gigs.html
@@ -52,8 +52,109 @@
 
 
 <h3>Upcoming Gigs</h3>
+
+
 <hr>
 
+
+<h4>MC at Shapeiros Tuesdays: Perth</h4>
+
+             <p>23 June, - 8.30pm, Upstairs @ the Brisbane Hotel 
+Cnr Brisbane & Beaufort St 
+Highgate Perth, WA 6003 
+</p>
+
+            <a class="http://www.lazysusans.com.au/?page_id=155"> Tickets On the Door!</a>
+<br>
+
+<hr>
+
+<h4>Headline Spot: Bunbury</h4>
+
+             <p>24 June, - 8.30pm, Lighthouse Beach Resort (Cellar)
+Carey Street 
+Bunbury, WA
+</p>
+
+            <a class="http://thecomedyemporium.com/"> Event Website Here!</a>
+<br>
+
+<h4>Headline Spot: Comedy at the Charles Hotel</h4>
+
+             <p>25 June, - 8pm,  509 CHARLES STREET, NORTH PERTH 
+</p>
+
+            <a class="http://charleshotel.com.au/EntertainmentMain/entertainment/comedy/index.php"> Event Website Here!</a>
+<br>
+
+<hr>
+
+<br>
+
+<h4>Headline Spot: Lazy Susans</h4>
+
+             <p>26 June, - 8pm,  22 June, - 8.30pm, Upstairs @ the Brisbane Hotel 
+Cnr Brisbane & Beaufort St 
+Highgate Perth, WA 6003 
+</p>
+
+            <a class="http://www.lazysusans.com.au/?page_id=103"> Event Website Here!</a>
+<br>
+<hr>
+
+<h4>Headline Spot: Little Creatures</h4>
+
+             <p>27 June, - 8pm,  Creatures Next Door, 40 Mews Road, Fremantle
+</p>
+
+            <a class="http://www.comedylounge.com.au/2011/little-comedy-lounge-event/"> Event Website Here!</a>
+<br>
+
+<hr>
+
+<h4>Headline Spot: Little Creatures</h4>
+
+             <p>27 June, - 8pm,  Creatures Next Door, 40 Mews Road, Fremantle
+</p>
+
+            <a class="http://www.comedylounge.com.au/2011/little-comedy-lounge-event/"> Event Website Here!</a>
+<br>
+
+<hr>
+
+<h4>Alice Fraser is SAVAGE: Solo show at the Sydney Comedy Store</h4>
+
+             <p>24th July - 7:00 pm, The Sydney Comedy Store, Entertainment Quarter, Fox Studios, Moore Park, Sydney
+</p>
+
+            <a class="http://comedystore.com.au/index.php?option=com_eventlist&view=details&id=290"> Tickets Here!</a>
+<br>
+
+<h4>Alice Fraser is SAVAGE: Edinburgh Preview show at Mama Biashara</h4>
+
+             <p>27th July - 7:00 pm, Mama Biashara Charity Shop in W 12 Shopping and Leisure, on Shepherd's Bush Green
+</p>
+
+            <a class="https://www.facebook.com/events/1649681065255950/?notif_t=plan_user_joined"> Entry By Donation: Details Here!</a>
+<br>
+
+<h4>Alice Fraser is SAVAGE: Edinburgh Free Fringe</h4>
+
+             <p>4-30th August (every night) - 7:30 pm, The Three Sisters, Gothic Room
+</p>
+
+            <a class="http://www.laughinghorsecomedy.co.uk/freefestival/threesisters-specs.htm"> Entry By Donation: Venue Details Here!</a>
+<br>
+
+<h4>Alice Fraser is SAVAGE: Melbourne Fringe</h4>
+
+             <p>Sat 26th Sept to Friday 2nd Oct, 8pm, The Parliament Room, Imperial Hotel, Melbourne
+</p>
+
+            <a class="https://www.facebook.com/ImpyComedy"> Venue Details here. Tickets TBC!</a>
+<br>
+
+<h3>You missed me at...</h3>
 
 <h4>Alice Fraser is SAVAGE at Sydney Comedy Festival 2015</h4>
 
@@ -73,8 +174,6 @@ Sat 30th May </p>
             <a class="http://www.sydneycomedyfest.com.au/single-event?show_id=891"> Tickets Here!</a>
 <br>
 <hr>
-
-<h3>You missed me at...</h3>
 
 <h4>Love Bites (Host) at Melbourne International Comedy Festival 2015</h4>
 
