--- a/gigs.html
+++ b/gigs.html
@@ -57,7 +57,7 @@
 <hr>
 
 
-<h4>MC at Shapeiros Tuesdays: Perth</h4>
+<h4>MC at Shapeiros Tuesday (Perth)</h4>
 
              <p>23 June, - 8.30pm, Upstairs @ the Brisbane Hotel 
 Cnr Brisbane & Beaufort St 
@@ -69,7 +69,7 @@ Highgate Perth, WA 6003
 
 <hr>
 
-<h4>Headline Spot: Bunbury</h4>
+<h4>Headline Spot: Bunbury (W.A)</h4>
 
              <p>24 June, - 8.30pm, Lighthouse Beach Resort (Cellar)
 Carey Street 
@@ -79,7 +79,7 @@ Bunbury, WA
             <a class="http://thecomedyemporium.com/"> Event Website Here!</a>
 <br>
 
-<h4>Headline Spot: Comedy at the Charles Hotel</h4>
+<h4>Headline Spot: Comedy at the Charles Hotel (Perth)</h4>
 
              <p>25 June, - 8pm,  509 CHARLES STREET, NORTH PERTH 
 </p>
@@ -91,7 +91,7 @@ Bunbury, WA
 
 <br>
 
-<h4>Headline Spot: Lazy Susans</h4>
+<h4>Headline Spot: Lazy Susans (Perth)</h4>
 
              <p>26 June, - 8pm,  22 June, - 8.30pm, Upstairs @ the Brisbane Hotel 
 Cnr Brisbane & Beaufort St 
@@ -102,7 +102,7 @@ Highgate Perth, WA 6003
 <br>
 <hr>
 
-<h4>Headline Spot: Little Creatures</h4>
+<h4>Headline Spot: Little Creatures (Perth)</h4>
 
              <p>27 June, - 8pm,  Creatures Next Door, 40 Mews Road, Fremantle
 </p>
@@ -112,12 +112,31 @@ Highgate Perth, WA 6003
 
 <hr>
 
-<h4>Headline Spot: Little Creatures</h4>
+<h4>Headline Spot: Happy Endings (Sydney)</h4>
 
-             <p>27 June, - 8pm,  Creatures Next Door, 40 Mews Road, Fremantle
+             <p>4 July, 8pm 154 Brougham St, Cnr William St, Kings Cross
 </p>
 
-            <a class="http://www.comedylounge.com.au/2011/little-comedy-lounge-event/"> Event Website Here!</a>
+            <a class="http://happyendingscomedyclub.com.au/category/comedy-shows-sydney/"> Event Website Here!</a>
+<br>
+
+<hr>
+
+<h4>Happy Endings (Sydney)</h4>
+
+             <p>4, 6, 8 July, 8pm 154 Brougham St, Cnr William St, Kings Cross
+</p>
+
+            <a class="http://happyendingscomedyclub.com.au/category/comedy-shows-sydney/"> Event Website Here!</a>
+<br>
+
+<hr>
+<h4>Mic in Hand (Sydney)</h4>
+
+             <p>9 July, Friend in Hand Pub,58 Cowper St, Glebe
+</p>
+
+            <a class="http://friendinhand.com/?page_id=149"> Event Website Here!</a>
 <br>
 
 <hr>
