--- a/gigs.html
+++ b/gigs.html
@@ -53,6 +53,28 @@
 
 <h3>Upcoming Gigs</h3>
 
+<hr>
+
+
+<h4>Conspiracy Theory Show at Giant Dwarf (Sydney)</h4>
+
+             <p>10 June, - 8.30pm, 199 Cleveland St, Redfern, Sydney
+</p>
+
+            <a class="https://www.facebook.com/events/1443241642659592/"> Event Page Here!</a>
+<br>
+
+<hr>
+
+
+<h4>Laugh Your Arts Off – Hearts For Arts Law Comedy Fundraiser (Sydney)</h4>
+
+             <p>11 June, - 7.30pm, King St Brewhouse, Sydney
+</p>
+
+            <a class="Website: http://www.artslaw.com.au/news/entry/hearts-for-arts-law-presents-laugh-your-arts-off/"> Event Page & Tickets Here!</a>
+<br>
+
 
 <hr>
 
