--- a/gigs.html
+++ b/gigs.html
@@ -35,7 +35,7 @@
 <hr>
 <h4>SBS Comedy</h4>
 
-            <a class="https://www.sbs.com.au/comedy/person/alice-rebekah-fraser-0"> Read Here!</a>
+            <a href="https://www.sbs.com.au/comedy/person/alice-rebekah-fraser-0"> Read Here!</a>
 <br>
 <hr>
 <h4>Sexy Six Year Olds: For A Rational Fear</h4>
