--- a/gigs.html
+++ b/gigs.html
@@ -30,7 +30,7 @@
 <hr>
 <h4>Soundcloud</h4>
 
-            <a href="https://soundcloud.com/alice-rebekah-fraser"> Listen Here!</a>
+            <a class="btn btn-info" href="https://soundcloud.com/alice-rebekah-fraser"> Listen Here!</a>
 <br>
 <hr>
 <h4>SBS Comedy</h4>
