--- a/gigs.html
+++ b/gigs.html
@@ -35,17 +35,17 @@
 <hr>
 <h4>SBS Comedy</h4>
 
-            <a href="https://www.sbs.com.au/comedy/person/alice-rebekah-fraser-0"> Read Here!</a>
+            <a class="btn btn-info" href="https://www.sbs.com.au/comedy/person/alice-rebekah-fraser-0"> Read Here!</a>
 <br>
 <hr>
 <h4>Sexy Six Year Olds: For A Rational Fear</h4>
 
-            <a href="http://www.youtube.com/watch?v=k4l93vbyWWw"> Watch Here!</a>
+            <a class="btn btn-info" href="http://www.youtube.com/watch?v=k4l93vbyWWw"> Watch Here!</a>
 <br>
 <hr>
 <h4>TEDx Talk: What Are We Doing?</h4>
 
-            <a href="http://www.youtube.com/watch?v=M4MlaRGcFHI"> Watch Here!</a>
+            <a class="btn btn-info" href="http://www.youtube.com/watch?v=M4MlaRGcFHI"> Watch Here!</a>
 <br>
 <hr>
 
@@ -61,7 +61,7 @@
              <p>10 June, - 8.30pm, 199 Cleveland St, Redfern, Sydney
 </p>
 
-            <a href="https://www.facebook.com/events/1443241642659592/"> Event Page Here!</a>
+            <a class="btn btn-info" href="https://www.facebook.com/events/1443241642659592/"> Event Page Here!</a>
 <br>
 
 <hr>
@@ -72,7 +72,7 @@
              <p>11 June, - 7.30pm, King St Brewhouse, Sydney
 </p>
 
-            <a href="Website: http://www.artslaw.com.au/news/entry/hearts-for-arts-law-presents-laugh-your-arts-off/"> Event Page & Tickets Here!</a>
+            <a class="btn btn-info" href="Website: http://www.artslaw.com.au/news/entry/hearts-for-arts-law-presents-laugh-your-arts-off/"> Event Page & Tickets Here!</a>
 <br>
 
 
@@ -86,7 +86,7 @@ Cnr Brisbane & Beaufort St
 Highgate Perth, WA 6003 
 </p>
 
-            <a href="http://www.lazysusans.com.au/?page_id=155"> Tickets On the Door!</a>
+            <a class="btn btn-info" href="http://www.lazysusans.com.au/?page_id=155"> Tickets On the Door!</a>
 <br>
 
 <hr>
@@ -98,7 +98,7 @@ Carey Street
 Bunbury, WA
 </p>
 
-            <a href="http://thecomedyemporium.com/"> Event Website Here!</a>
+            <a class="btn btn-info" href="http://thecomedyemporium.com/"> Event Website Here!</a>
 <br>
 
 <h4>Headline Spot: Comedy at the Charles Hotel (Perth)</h4>
@@ -106,7 +106,7 @@ Bunbury, WA
              <p>25 June, - 8pm,  509 CHARLES STREET, NORTH PERTH 
 </p>
 
-            <a href="http://charleshotel.com.au/EntertainmentMain/entertainment/comedy/index.php"> Event Website Here!</a>
+            <a class="btn btn-info" href="http://charleshotel.com.au/EntertainmentMain/entertainment/comedy/index.php"> Event Website Here!</a>
 <br>
 
 <hr>
@@ -120,7 +120,7 @@ Cnr Brisbane & Beaufort St
 Highgate Perth, WA 6003 
 </p>
 
-            <a href="http://www.lazysusans.com.au/?page_id=103"> Event Website Here!</a>
+            <a class="btn btn-info" href="http://www.lazysusans.com.au/?page_id=103"> Event Website Here!</a>
 <br>
 <hr>
 
@@ -129,7 +129,7 @@ Highgate Perth, WA 6003
              <p>27 June, - 8pm,  Creatures Next Door, 40 Mews Road, Fremantle
 </p>
 
-            <a href="http://www.comedylounge.com.au/2011/little-comedy-lounge-event/"> Event Website Here!</a>
+            <a class="btn btn-info" href="http://www.comedylounge.com.au/2011/little-comedy-lounge-event/"> Event Website Here!</a>
 <br>
 
 <hr>
@@ -139,7 +139,7 @@ Highgate Perth, WA 6003
              <p>4 July, 8pm 154 Brougham St, Cnr William St, Kings Cross
 </p>
 
-            <a href="http://happyendingscomedyclub.com.au/category/comedy-shows-sydney/"> Event Website Here!</a>
+            <a class="btn btn-info" href="http://happyendingscomedyclub.com.au/category/comedy-shows-sydney/"> Event Website Here!</a>
 <br>
 
 <hr>
@@ -149,7 +149,7 @@ Highgate Perth, WA 6003
              <p>4, 6, 8 July, 8pm 154 Brougham St, Cnr William St, Kings Cross
 </p>
 
-            <a href="http://happyendingscomedyclub.com.au/category/comedy-shows-sydney/"> Event Website Here!</a>
+            <a class="btn btn-info" href="http://happyendingscomedyclub.com.au/category/comedy-shows-sydney/"> Event Website Here!</a>
 <br>
 
 <hr>
@@ -158,7 +158,7 @@ Highgate Perth, WA 6003
              <p>9 July, Friend in Hand Pub,58 Cowper St, Glebe
 </p>
 
-            <a href="http://friendinhand.com/?page_id=149"> Event Website Here!</a>
+            <a class="btn btn-info" href="http://friendinhand.com/?page_id=149"> Event Website Here!</a>
 <br>
 
 <hr>
@@ -168,7 +168,7 @@ Highgate Perth, WA 6003
              <p>24th July - 7:00 pm, The Sydney Comedy Store, Entertainment Quarter, Fox Studios, Moore Park, Sydney
 </p>
 
-            <a href="http://comedystore.com.au/index.php?option=com_eventlist&view=details&id=290"> Tickets Here!</a>
+            <a class="btn btn-info" href="http://comedystore.com.au/index.php?option=com_eventlist&view=details&id=290"> Tickets Here!</a>
 <br>
 
 <h4>Alice Fraser is SAVAGE: Edinburgh Preview show at Mama Biashara</h4>
@@ -176,7 +176,7 @@ Highgate Perth, WA 6003
              <p>27th July - 7:00 pm, Mama Biashara Charity Shop in W 12 Shopping and Leisure, on Shepherd's Bush Green
 </p>
 
-            <a href="https://www.facebook.com/events/1649681065255950/?notif_t=plan_user_joined"> Entry By Donation: Details Here!</a>
+            <a class="btn btn-info" href="https://www.facebook.com/events/1649681065255950/?notif_t=plan_user_joined"> Entry By Donation: Details Here!</a>
 <br>
 
 <h4>Alice Fraser is SAVAGE: Edinburgh Free Fringe</h4>
@@ -184,7 +184,7 @@ Highgate Perth, WA 6003
              <p>4-30th August (every night) - 7:30 pm, The Three Sisters, Gothic Room
 </p>
 
-            <a href="http://www.laughinghorsecomedy.co.uk/freefestival/threesisters-specs.htm"> Entry By Donation: Venue Details Here!</a>
+            <a class="btn btn-info" href="http://www.laughinghorsecomedy.co.uk/freefestival/threesisters-specs.htm"> Entry By Donation: Venue Details Here!</a>
 <br>
 
 <h4>Alice Fraser is SAVAGE: Melbourne Fringe</h4>
@@ -192,7 +192,7 @@ Highgate Perth, WA 6003
              <p>Sat 26th Sept to Friday 2nd Oct, 8pm, The Parliament Room, Imperial Hotel, Melbourne
 </p>
 
-            <a href="https://www.facebook.com/ImpyComedy"> Venue Details here. Tickets TBC!</a>
+            <a class="btn btn-info" href="https://www.facebook.com/ImpyComedy"> Venue Details here. Tickets TBC!</a>
 <br>
 
 <h3>You missed me at...</h3>
@@ -204,7 +204,7 @@ Fri 8th May - 8:15 pm,
 Sat 9th May  - 8:15 pm,
 Sun 10th May  - 7:15 pm</p>
 
-            <a href="http://sa2.seatadvisor.com/sabo/servlets/TicketRequest;jsessionid=2ECFF23B54A295E08F8C672A903E474E?eventId=100791330&presenter=AUADCOMEDY&venue=AURHINOROOM&event="> Tickets Here!</a>
+            <a class="btn btn-info" href="http://sa2.seatadvisor.com/sabo/servlets/TicketRequest;jsessionid=2ECFF23B54A295E08F8C672A903E474E?eventId=100791330&presenter=AUADCOMEDY&venue=AURHINOROOM&event="> Tickets Here!</a>
 <br>
 
 <h4>Headline Spots at the Rhino Room in Adelaide</h4>
@@ -212,7 +212,7 @@ Sun 10th May  - 7:15 pm</p>
              <p>Fri 29 May,
 Sat 30th May </p>
 
-            <a href="http://www.sydneycomedyfest.com.au/single-event?show_id=891"> Tickets Here!</a>
+            <a class="btn btn-info" href="http://www.sydneycomedyfest.com.au/single-event?show_id=891"> Tickets Here!</a>
 <br>
 <hr>
 
