--- a/gigs.html
+++ b/gigs.html
@@ -72,7 +72,7 @@
              <p>11 June, - 7.30pm, King St Brewhouse, Sydney
 </p>
 
-            <a class="btn btn-info" href="Website: http://www.artslaw.com.au/news/entry/hearts-for-arts-law-presents-laugh-your-arts-off/"> Event Page & Tickets Here!</a>
+            <a class="btn btn-info" href="http://www.artslaw.com.au/news/entry/hearts-for-arts-law-presents-laugh-your-arts-off/"> Event Page & Tickets Here!</a>
 <br>
 
 
