--- a/media.html
+++ b/media.html
@@ -18,7 +18,36 @@
 		<br>
 	</div>
 	</div>
+	
+	<hr>
 
+<p><b>Melbourne International Comedy Festival Funny Tonne: Daniel Paproth 5 Stars</b></p>
+
+<p><a href="http://www.comedyfestival.com.au/2015/season/funny-tonne/daniel-paproth/review/savage-alice-fraser/">Funny Tonne Review Melbourne International Comedy Festival</a></p>
+
+<p><i>April 2015</i></p>
+
+<hr>
+
+<hr>
+
+<p><b>The Clothesline: Julia Chamberlain, 4 Stars</b></p>
+
+<p><a href="http://theclothesline.com.au/alice-fraser-winner-fringe-review/">Alice Fraser in Everyone's A Winner, Adelaide Fringe 2015</a></p>
+
+<p><i>March 2014</i></p>
+
+<hr>	
+
+<hr>
+
+<p><b>Rip It Up, 4 Stars</b></p>
+
+<p><a href="http://ripitup.com.au/festivals/review-alice-fraser-everyones-a-winner/">Alice Fraser in Everyone's A Winner, Adelaide Fringe 2015</a></p>
+
+<p><i>March 2015</i></p>
+
+<hr>	
 <hr>
 
 <p><b>Crikey Op-Ed "Funny Ladies: Women Stand Up"</b></p>
