Add to checklist

--- a/xml.html
+++ b/xml.html
@@ -59,6 +59,7 @@ $(document).ready(function(){
 <b>Steps for a New Podcast</b>
 <ol>
   <li>Fill out all the fields below.  The fields below provide the information for each episode.</li>
+  <li>First check that the sound quality is even between the intro music, intro segment and the rest of the interview!</li>
   <li>Hit the "Submit" button when you've filled all the fields out.</li>
   <li>The results will appear down the bottom of the page.</li>
   <li>Using the result under the heading "file name", rename the mp3 file of the podcast.</li>
